--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 div {
   width: 700px;
   margin: auto;
-  font-family: "Helvteica Neue";
+  font-family: "Helvetica Neue";
   padding: 30px;
 }
 
