--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ div {
   margin: auto;
   font-family: "Helvetica Neue";
   padding: 30px;
+  background: white;
 }
 
 /* ID selector to select the element with id 'main-header' */
